--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
         android:theme="@style/Theme.FirstAssignmengt"
         tools:targetApi="31">
         <activity
+            android:name=".CafeOrderActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FirstAssignmengt" />
+        <activity
+            android:name=".CafeMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".TechnologyListScreen"
             android:exported="false"
             android:theme="@style/Theme.FirstAssignmengt" />
